# CUHKSZ-GroupDiscussionSystem

./: .cursorignore  .dockerignore  .env.example  .env.mcp.example  .gitignore  DEMO_SCRIPT.md  KNOWN_LIMITATIONS_FINAL.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  main.py  pyproject.toml
.cursor/: MCP_SECURITY.md  mcp.json
app/: __init__.py  config.py  integration_logging.py  logging.py
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
docs/: DEMO_UI_CHECKLIST.md  MCP_TOOLCHAIN_VALIDATION.md  acceptance_evidence_spec.md  agent_runtime_v2.md  ai_human_calibration_limitations.md  api_mvp.md  application_service_layer.md  architecture.md  architecture_at_a_glance.md  asr_tts_providers.md  assessment_simulation.md  assignment_completion_and_delivery_reports.md  audio_architecture.md  audio_storage_and_assets.md  authorable_artifact_spec.md  authoring_studio_and_publication_pipeline.md  build_pipeline.md  ci_and_release.md  cli_discussion_mvp.md  coach_report.md  cross_platform.md  curriculum_pack_spec.md  curriculum_packs_and_assignment_workflow.md  data_contract.md  demo_kit_spec.md  demo_runbook.md  e2e_scenario_matrix.md  embedding_providers.md  engineering_hardening.md  evaluation_framework.md  evidence_index.md  feedback_signals.md  final_acceptance_checklist.md  final_delivery_overview.md  final_handover_runbook.md  frontend_codegen_and_e2e.md  frontend_discussion_console.md  frontend_runtime_review_console.md  index_artifacts.md  indexing_and_hybrid_retrieval.md  (+50 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: build_final_release.sh  run_api.sh  run_final_demo.sh  run_smoke.sh  run_ui.sh  verify_handover.sh
storage/: README.md
tests/: __init__.py  conftest.py  (+121 more)
(+2239 files in other folders)
