[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuhksz-group-discussion-system"
# Single source of truth for the app version string (see app/ops/version.py and GET /health).
version = "0.1.0"
description = "Downstream offline knowledge build for CUHKSZ-Datahub exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

# Install for API + UI + pytest: pip install -e ".[dev]"
# Core library-only install (no FastAPI/Streamlit/tests): pip install -e .
[project.optional-dependencies]
graph = [
    "langgraph",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "v2_graph: tests requiring langgraph-backed V2 runtime",
]
